# DOMGuard

./: .gitignore  AGENTIC_AI_DOMGUARD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRIVACY.md  README.md  SECURITY.md  domguard-architecture.md  mkdocs.yml
.domguard/: blocked_sites.toml
.domguard/sites/: mysite_com.toml
.domguard/takeover_history/: takeover-1883ebcddbd.json
.domguard/workflows/: workflow-1883ebd308df.toml
.github/workflows/: ci.yml  release.yml
docs/: changelog.md  faq.md  index.md
docs/api-reference/: commands.md  configuration.md  json-output.md
docs/contributing/: code-standards.md  development-setup.md
docs/features/: debug-mode.md  interact-mode.md  performance.md  security.md  session-recording.md  workflows.md
docs/getting-started/: first-command.md  installation.md  prerequisites.md
docs/reference/: error-codes.md  session-format.md  workflow-syntax.md
docs/troubleshooting/: cdp-connection.md
extension/: background.js  content.js  manifest.json  popup.html  popup.js  styles.css
src/: captcha.rs  cdp.rs  config.rs  correction.rs  debug.rs  explanation.rs  inspire.rs  interact.rs  main.rs  output.rs  security.rs  session.rs  site_instructions.rs  takeover.rs  workflow.rs
tasks/api/: api-001.md  api-002.md  api-003.md  api-004.md  api-005.md  api-006.md
tasks/auth/: auth-001.md  auth-002.md  auth-003.md  auth-004.md
tasks/backend/: backend-001.md  backend-002.md  backend-003.md  backend-004.md  backend-005.md  backend-006.md  backend-007.md  backend-008.md  backend-009.md  backend-010.md  backend-011.md
tasks/deployment/: deployment-001.md  deployment-002.md  deployment-003.md
tasks/docs/: docs-001.md  docs-002.md  docs-003.md  docs-004.md  docs-005.md  docs-006.md
tasks/frontend/: frontend-001.md  frontend-002.md  frontend-003.md  frontend-004.md  frontend-005.md  frontend-006.md  frontend-007.md  frontend-008.md  frontend-009.md  frontend-010.md  frontend-011.md  frontend-012.md  frontend-013.md  frontend-014.md  frontend-015.md  frontend-016.md  frontend-017.md  frontend-018.md  frontend-019.md  frontend-020.md  frontend-021.md  frontend-022.md  frontend-023.md  frontend-024.md  frontend-025.md  frontend-026.md  frontend-027.md  frontend-028.md  frontend-029.md  frontend-030.md  frontend-031.md  frontend-032.md  frontend-033.md  frontend-034.md  frontend-035.md  frontend-036.md  frontend-037.md  frontend-038.md  frontend-039.md  frontend-040.md  (+4 more)
tasks/setup/: setup-001.md  setup-002.md  setup-003.md  setup-004.md
tasks/testing/: testing-001.md  testing-002.md  testing-003.md  testing-004.md  testing-005.md  testing-006.md  testing-007.md  testing-008.md  testing-009.md  testing-010.md  testing-011.md  testing-012.md
tests/: cli_tests.rs
