[package]
name = "domguard"
version = "0.1.0"
edition = "2021"
description = "Local-first Chrome DevTools CLI for AI agents"
license = "MIT"
repository = "https://github.com/Guard8-ai/DOMGuard"
keywords = ["chrome", "devtools", "cdp", "cli", "automation"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
toml = "0.8"
colored = "2"
base64 = "0.22"
regex = "1"
which = "6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"

[[bin]]
name = "domguard"
path = "src/main.rs"

[profile.release]
lto = true
codegen-units = 1
strip = true
