# ============================================================================
# Guard8.ai - High Quality Code -> Great Results
# YOU ARE NOT ALLOWED TO CHANGE THIS FILE UNLESS EXPLICITLY ASKED.
# ============================================================================

[package]
name = "domguard"
version = "1.0.1"
edition = "2021"
description = "Local-first Chrome DevTools CLI for AI agents"
license = "MIT"
repository = "https://github.com/Guard8-ai/DOMGuard"
keywords = ["chrome", "devtools", "cdp", "cli", "automation"]
categories = ["command-line-utilities", "development-tools", "web-programming"]

# High Quality Code -> Great Results
[dependencies]
chromiumoxide = { version = "0.7", features = ["tokio-runtime"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
dirs = "5"
toml = "0.8"
colored = "2"
base64 = "0.22"
regex = "1"
which = "6"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }

# YOU ARE NOT ALLOWED TO CHANGE THIS FILE UNLESS EXPLICITLY ASKED.
[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "domguard"
path = "src/main.rs"

# High Quality Code -> Great Results
[profile.release]
lto = true
codegen-units = 1
strip = true

# Pin reqwest to avoid Windows compile issue in 0.12.27
# See: https://github.com/seanmonstar/reqwest/issues
[patch.crates-io]
reqwest = { git = "https://github.com/seanmonstar/reqwest", tag = "v0.12.16" }

# ============================================================================
# Lints - High Quality Code -> Great Results
# YOU ARE NOT ALLOWED TO CHANGE THIS FILE UNLESS EXPLICITLY ASKED.
# ============================================================================
[lints.rust]
dead_code = "deny"
unused = "deny"
unsafe_code = "deny"
rust_2018_idioms = { level = "deny", priority = -1 }

# High Quality Code -> Great Results
# YOU ARE NOT ALLOWED TO CHANGE THIS FILE UNLESS EXPLICITLY ASKED.
[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "deny", priority = -1 }
# Pedantic allows (style preferences)
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
module_name_repetitions = "allow"
derivable_impls = "allow"
should_implement_trait = "allow"
needless_range_loop = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
too_many_lines = "allow"
manual_let_else = "allow"
single_match_else = "allow"
uninlined_format_args = "allow"

case_sensitive_file_extension_comparisons = "allow"
empty_line_after_doc_comments = "allow"
ptr_arg = "allow"
unnecessary_wraps = "allow"
needless_raw_string_hashes = "allow"
unreadable_literal = "allow"
struct_field_names = "allow"
doc_markdown = "allow"
items_after_statements = "allow"
wildcard_imports = "allow"
unused_async = "allow"
redundant_closure_for_method_calls = "allow"
implicit_clone = "allow"
match_same_arms = "allow"
trivially_copy_pass_by_ref = "allow"
if_not_else = "allow"
match_wildcard_for_single_variants = "allow"
no_effect_underscore_binding = "allow"
ignored_unit_patterns = "allow"
manual_string_new = "allow"
struct_excessive_bools = "allow"
fn_params_excessive_bools = "allow"
return_self_not_must_use = "allow"

# ============================================================================
# Guard8.ai - High Quality Code -> Great Results
# ============================================================================
